<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity">

    <include
        android:id="@+id/login_toolBar"
        layout="@layout/bar_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_const_layout"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/login_lbl"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:hint="@string/email_tb"
            style="@style/EditTextStyle"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_tb"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <Button
            android:id="@+id/login"
            style="@style/BlueButtonStyle"
            android:layout_marginTop="68dp"
            android:text="@string/go_btn"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/forget_your_password"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>