<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterActivity">

<include
    android:id="@+id/register_toolBar"
    layout="@layout/bar_layout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/const_register_layout"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/newAccount_lbl"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            style="@style/EditTextStyle"
            android:textColor="@color/bodyColorDark"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/username_tb"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:textColor="@color/bodyColorDark"
            android:ems="10"
            android:hint="@string/email_tb"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:textColor="@color/bodyColorDark"
            android:hint="@string/password_tb"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/login"
            style="@style/BlueButtonStyle"
            android:layout_marginTop="40dp"
            android:text="@string/signup_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>